--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,16 @@ html {
 }
 
 .App {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   text-align: center;
+}
+
+.logo {
+  width: 200px;
 }
 
 audio {
@@ -15,8 +24,8 @@ audio {
 
 /* Clock styling and code inspired by https://codepen.io/sthig/pen/QxevLW */
 .clock {
-  width: 15rem;
-  height: 15rem;
+  height: 20vh;
+  width: 20vh;
   border:20px solid #916D37;
   border-radius:50%;
   margin:50px auto;
